--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,10 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(dplyr)\n",
-    "install.packages(\"tidyverse\")\n",
     "library(tidyverse)\n",
-    "library(readxl)"
+    "library(repr)\n",
+    "library(readxl)\n"
    ]
   },
   {
@@ -31,6 +30,27 @@
     "all_stars<- read.excel(\"data/NBA All Stars 2000-2016 - Sheet1.csv\")\n",
     "all_stars\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
