--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "library(tidyverse)\n",
     "library(repr)\n",
-    "library(readxl)\n"
+    "library(readxl)\n",
+    "\n"
    ]
   },
   {
