--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Group 19: Project\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NBA:\n",
+    "NBA is one of the most awaited sport events in America and the globe in general.....\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,17 +59,168 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "players <- read.csv(\"data/nba_player_stats.csv\")\n",
+    "Read the NBA players stats file. Here we only use data for 2011 to 2015 season....\n",
     "\n",
+    "The colummn are:\n",
+    "\n",
+    "- 'year' : Season\n",
+    "- 'Player': player's name \n",
+    "- 'not_Match_Up' :\n",
+    "- 'MIN' : \n",
+    "- 'PTS' : Average points that player scored\n",
+    "\n",
+    "....\n",
+    "\n",
+    "We want to answer the question: With a certain stats throughout the season, is it likely for a player to win the All Star title?\n",
+    "\n",
+    "The original datasets are available here: \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 27</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Year</th><th scope=col>Player</th><th scope=col>not_Match_Up</th><th scope=col>MIN</th><th scope=col>PTS</th><th scope=col>not_WL</th><th scope=col>not_MIN</th><th scope=col>FG.</th><th scope=col>not_FGM</th><th scope=col>not_FGA</th><th scope=col>⋯</th><th scope=col>AST</th><th scope=col>not_DREB</th><th scope=col>not_REB</th><th scope=col>not_AST</th><th scope=col>not_STL</th><th scope=col>BLK</th><th scope=col>TOV</th><th scope=col>PF</th><th scope=col>PlusMinus</th><th scope=col>Fantasy</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>2011</td><td>Kevin Durant     </td><td>78</td><td>38.9</td><td>27.7</td><td>9.1</td><td>19.7</td><td>46.2</td><td>1.9</td><td>5.3</td><td>⋯</td><td>2.7</td><td>1.1</td><td>1.0</td><td>2.8</td><td>24.9</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>2011</td><td>LeBron James     </td><td>79</td><td>38.8</td><td>26.7</td><td>9.6</td><td>18.8</td><td>51.0</td><td>1.2</td><td>3.5</td><td>⋯</td><td>7.0</td><td>1.6</td><td>0.6</td><td>3.6</td><td>28.6</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>2011</td><td>Carmelo Anthony  </td><td>77</td><td>35.7</td><td>25.6</td><td>8.9</td><td>19.5</td><td>45.5</td><td>1.2</td><td>3.3</td><td>⋯</td><td>2.9</td><td>0.9</td><td>0.6</td><td>2.7</td><td>22.7</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>2011</td><td>Dwyane Wade      </td><td>76</td><td>37.1</td><td>25.5</td><td>9.1</td><td>18.2</td><td>50.0</td><td>0.8</td><td>2.7</td><td>⋯</td><td>4.6</td><td>1.5</td><td>1.1</td><td>3.1</td><td>24.8</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>2011</td><td>Kobe Bryant      </td><td>82</td><td>33.9</td><td>25.3</td><td>9.0</td><td>20.0</td><td>45.1</td><td>1.4</td><td>4.3</td><td>⋯</td><td>4.7</td><td>1.2</td><td>0.1</td><td>3.0</td><td>21.4</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>2011</td><td>Amar'e Stoudemire</td><td>78</td><td>36.8</td><td>25.3</td><td>9.5</td><td>19.0</td><td>50.2</td><td>0.1</td><td>0.3</td><td>⋯</td><td>2.6</td><td>0.9</td><td>1.9</td><td>3.2</td><td>24.6</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 27\n",
+       "\\begin{tabular}{r|lllllllllllllllllllll}\n",
+       "  & Year & Player & not\\_Match\\_Up & MIN & PTS & not\\_WL & not\\_MIN & FG. & not\\_FGM & not\\_FGA & ⋯ & AST & not\\_DREB & not\\_REB & not\\_AST & not\\_STL & BLK & TOV & PF & PlusMinus & Fantasy\\\\\n",
+       "  & <int> & <chr> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <lgl> & <lgl> & <lgl> & <lgl> & <lgl>\\\\\n",
+       "\\hline\n",
+       "\t1 & 2011 & Kevin Durant      & 78 & 38.9 & 27.7 & 9.1 & 19.7 & 46.2 & 1.9 & 5.3 & ⋯ & 2.7 & 1.1 & 1.0 & 2.8 & 24.9 & NA & NA & NA & NA & NA\\\\\n",
+       "\t2 & 2011 & LeBron James      & 79 & 38.8 & 26.7 & 9.6 & 18.8 & 51.0 & 1.2 & 3.5 & ⋯ & 7.0 & 1.6 & 0.6 & 3.6 & 28.6 & NA & NA & NA & NA & NA\\\\\n",
+       "\t3 & 2011 & Carmelo Anthony   & 77 & 35.7 & 25.6 & 8.9 & 19.5 & 45.5 & 1.2 & 3.3 & ⋯ & 2.9 & 0.9 & 0.6 & 2.7 & 22.7 & NA & NA & NA & NA & NA\\\\\n",
+       "\t4 & 2011 & Dwyane Wade       & 76 & 37.1 & 25.5 & 9.1 & 18.2 & 50.0 & 0.8 & 2.7 & ⋯ & 4.6 & 1.5 & 1.1 & 3.1 & 24.8 & NA & NA & NA & NA & NA\\\\\n",
+       "\t5 & 2011 & Kobe Bryant       & 82 & 33.9 & 25.3 & 9.0 & 20.0 & 45.1 & 1.4 & 4.3 & ⋯ & 4.7 & 1.2 & 0.1 & 3.0 & 21.4 & NA & NA & NA & NA & NA\\\\\n",
+       "\t6 & 2011 & Amar'e Stoudemire & 78 & 36.8 & 25.3 & 9.5 & 19.0 & 50.2 & 0.1 & 0.3 & ⋯ & 2.6 & 0.9 & 1.9 & 3.2 & 24.6 & NA & NA & NA & NA & NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 27\n",
+       "\n",
+       "| <!--/--> | Year &lt;int&gt; | Player &lt;chr&gt; | not_Match_Up &lt;int&gt; | MIN &lt;dbl&gt; | PTS &lt;dbl&gt; | not_WL &lt;dbl&gt; | not_MIN &lt;dbl&gt; | FG. &lt;dbl&gt; | not_FGM &lt;dbl&gt; | not_FGA &lt;dbl&gt; | ⋯ ⋯ | AST &lt;dbl&gt; | not_DREB &lt;dbl&gt; | not_REB &lt;dbl&gt; | not_AST &lt;dbl&gt; | not_STL &lt;dbl&gt; | BLK &lt;lgl&gt; | TOV &lt;lgl&gt; | PF &lt;lgl&gt; | PlusMinus &lt;lgl&gt; | Fantasy &lt;lgl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | 2011 | Kevin Durant      | 78 | 38.9 | 27.7 | 9.1 | 19.7 | 46.2 | 1.9 | 5.3 | ⋯ | 2.7 | 1.1 | 1.0 | 2.8 | 24.9 | NA | NA | NA | NA | NA |\n",
+       "| 2 | 2011 | LeBron James      | 79 | 38.8 | 26.7 | 9.6 | 18.8 | 51.0 | 1.2 | 3.5 | ⋯ | 7.0 | 1.6 | 0.6 | 3.6 | 28.6 | NA | NA | NA | NA | NA |\n",
+       "| 3 | 2011 | Carmelo Anthony   | 77 | 35.7 | 25.6 | 8.9 | 19.5 | 45.5 | 1.2 | 3.3 | ⋯ | 2.9 | 0.9 | 0.6 | 2.7 | 22.7 | NA | NA | NA | NA | NA |\n",
+       "| 4 | 2011 | Dwyane Wade       | 76 | 37.1 | 25.5 | 9.1 | 18.2 | 50.0 | 0.8 | 2.7 | ⋯ | 4.6 | 1.5 | 1.1 | 3.1 | 24.8 | NA | NA | NA | NA | NA |\n",
+       "| 5 | 2011 | Kobe Bryant       | 82 | 33.9 | 25.3 | 9.0 | 20.0 | 45.1 | 1.4 | 4.3 | ⋯ | 4.7 | 1.2 | 0.1 | 3.0 | 21.4 | NA | NA | NA | NA | NA |\n",
+       "| 6 | 2011 | Amar'e Stoudemire | 78 | 36.8 | 25.3 | 9.5 | 19.0 | 50.2 | 0.1 | 0.3 | ⋯ | 2.6 | 0.9 | 1.9 | 3.2 | 24.6 | NA | NA | NA | NA | NA |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Year Player            not_Match_Up MIN  PTS  not_WL not_MIN FG.  not_FGM\n",
+       "1 2011 Kevin Durant      78           38.9 27.7 9.1    19.7    46.2 1.9    \n",
+       "2 2011 LeBron James      79           38.8 26.7 9.6    18.8    51.0 1.2    \n",
+       "3 2011 Carmelo Anthony   77           35.7 25.6 8.9    19.5    45.5 1.2    \n",
+       "4 2011 Dwyane Wade       76           37.1 25.5 9.1    18.2    50.0 0.8    \n",
+       "5 2011 Kobe Bryant       82           33.9 25.3 9.0    20.0    45.1 1.4    \n",
+       "6 2011 Amar'e Stoudemire 78           36.8 25.3 9.5    19.0    50.2 0.1    \n",
+       "  not_FGA ⋯ AST not_DREB not_REB not_AST not_STL BLK TOV PF PlusMinus Fantasy\n",
+       "1 5.3     ⋯ 2.7 1.1      1.0     2.8     24.9    NA  NA  NA NA        NA     \n",
+       "2 3.5     ⋯ 7.0 1.6      0.6     3.6     28.6    NA  NA  NA NA        NA     \n",
+       "3 3.3     ⋯ 2.9 0.9      0.6     2.7     22.7    NA  NA  NA NA        NA     \n",
+       "4 2.7     ⋯ 4.6 1.5      1.1     3.1     24.8    NA  NA  NA NA        NA     \n",
+       "5 4.3     ⋯ 4.7 1.2      0.1     3.0     21.4    NA  NA  NA NA        NA     \n",
+       "6 0.3     ⋯ 2.6 0.9      1.9     3.2     24.6    NA  NA  NA NA        NA     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Year</th><th scope=col>Player</th><th scope=col>MIN</th><th scope=col>PTS</th><th scope=col>FG.</th><th scope=col>REB</th><th scope=col>AST</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>2011</td><td>Kevin Durant     </td><td>38.9</td><td>27.7</td><td>46.2</td><td>6.8</td><td>2.7</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>2011</td><td>LeBron James     </td><td>38.8</td><td>26.7</td><td>51.0</td><td>7.5</td><td>7.0</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>2011</td><td>Carmelo Anthony  </td><td>35.7</td><td>25.6</td><td>45.5</td><td>7.3</td><td>2.9</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>2011</td><td>Dwyane Wade      </td><td>37.1</td><td>25.5</td><td>50.0</td><td>6.4</td><td>4.6</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>2011</td><td>Kobe Bryant      </td><td>33.9</td><td>25.3</td><td>45.1</td><td>5.1</td><td>4.7</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>2011</td><td>Amar'e Stoudemire</td><td>36.8</td><td>25.3</td><td>50.2</td><td>8.2</td><td>2.6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 7\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & Year & Player & MIN & PTS & FG. & REB & AST\\\\\n",
+       "  & <int> & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & 2011 & Kevin Durant      & 38.9 & 27.7 & 46.2 & 6.8 & 2.7\\\\\n",
+       "\t2 & 2011 & LeBron James      & 38.8 & 26.7 & 51.0 & 7.5 & 7.0\\\\\n",
+       "\t3 & 2011 & Carmelo Anthony   & 35.7 & 25.6 & 45.5 & 7.3 & 2.9\\\\\n",
+       "\t4 & 2011 & Dwyane Wade       & 37.1 & 25.5 & 50.0 & 6.4 & 4.6\\\\\n",
+       "\t5 & 2011 & Kobe Bryant       & 33.9 & 25.3 & 45.1 & 5.1 & 4.7\\\\\n",
+       "\t6 & 2011 & Amar'e Stoudemire & 36.8 & 25.3 & 50.2 & 8.2 & 2.6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 7\n",
+       "\n",
+       "| <!--/--> | Year &lt;int&gt; | Player &lt;chr&gt; | MIN &lt;dbl&gt; | PTS &lt;dbl&gt; | FG. &lt;dbl&gt; | REB &lt;dbl&gt; | AST &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 1 | 2011 | Kevin Durant      | 38.9 | 27.7 | 46.2 | 6.8 | 2.7 |\n",
+       "| 2 | 2011 | LeBron James      | 38.8 | 26.7 | 51.0 | 7.5 | 7.0 |\n",
+       "| 3 | 2011 | Carmelo Anthony   | 35.7 | 25.6 | 45.5 | 7.3 | 2.9 |\n",
+       "| 4 | 2011 | Dwyane Wade       | 37.1 | 25.5 | 50.0 | 6.4 | 4.6 |\n",
+       "| 5 | 2011 | Kobe Bryant       | 33.9 | 25.3 | 45.1 | 5.1 | 4.7 |\n",
+       "| 6 | 2011 | Amar'e Stoudemire | 36.8 | 25.3 | 50.2 | 8.2 | 2.6 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Year Player            MIN  PTS  FG.  REB AST\n",
+       "1 2011 Kevin Durant      38.9 27.7 46.2 6.8 2.7\n",
+       "2 2011 LeBron James      38.8 26.7 51.0 7.5 7.0\n",
+       "3 2011 Carmelo Anthony   35.7 25.6 45.5 7.3 2.9\n",
+       "4 2011 Dwyane Wade       37.1 25.5 50.0 6.4 4.6\n",
+       "5 2011 Kobe Bryant       33.9 25.3 45.1 5.1 4.7\n",
+       "6 2011 Amar'e Stoudemire 36.8 25.3 50.2 8.2 2.6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "players <- read.csv(\"data/nba_player_stats.csv\")\n",
+    "head(players)\n",
     "players_filtered <- players %>% \n",
     "    filter(Year <= 2015 & Year >= 2011) %>% \n",
     "    filter(Player != \"0\") %>% \n",
-    "    select(Year, Player, MIN, PTS, FG., REB, AST)\n"
+    "    select(Year, Player, MIN, PTS, FG., REB, AST)\n",
+    "head(players_filtered)"
    ]
   },
   {
@@ -83,6 +249,8 @@
     }
    ],
    "source": [
+    "# Read the all stars dataset that includes the name of all players that won an All Star title.\n",
+    "# Here we also use data from 2011 to 2015 season too\n",
     "all_stars <- read_csv(\"data/all_stars_2000_2016.csv\")\n",
     "all_stars_filtered <- all_stars %>% \n",
     "    filter(Year <= 2015 & Year >= 2011) %>% \n",
@@ -158,6 +326,7 @@
     }
    ],
    "source": [
+    "# We combine the above datasets into one and replace all players that were not an All Star MVP to \"Regular\".\n",
     "combined_data <- left_join(players_filtered, all_stars_filtered, by = c(\"Year\", \"Player\")) %>% \n",
     "    replace(is.na(.), \"Regular\") %>% mutate(Is_All_Star = as_factor(Is_All_Star))\n",
     "head(combined_data)\n"
