--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -213,7 +213,6 @@
     }
    ],
    "source": [
-    "\n",
     "players <- read.csv(\"https://raw.githubusercontent.com/RayNguyent/DSCI-100-project/develop/data/nba_player_stats.csv\")\n",
     "head(players)\n",
     "players_filtered <- players %>% \n",
@@ -255,8 +254,7 @@
     "all_stars_filtered <- all_stars %>% \n",
     "    filter(Year <= 2015 & Year >= 2011) %>% \n",
     "    select(Year, Player) %>% \n",
-    "    mutate(Is_All_Star = \"All Star\")\n",
-    "\n"
+    "    mutate(Is_All_Star = \"All Star\")"
    ]
   },
   {
