--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -327,7 +327,7 @@
     "# We combine the above datasets into one and replace all players that were not an All Star MVP to \"Regular\".\n",
     "combined_data <- left_join(players_filtered, all_stars_filtered, by = c(\"Year\", \"Player\")) %>% \n",
     "    replace(is.na(.), \"Regular\") %>% mutate(Is_All_Star = as_factor(Is_All_Star))\n",
-    "head(combined_data)\n"
+    "head(combined_data)"
    ]
   },
   {
