Updated nba_player_stats.csv to include all column names

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -81,71 +81,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A data.frame: 6 × 27</caption>\n",
+       "<caption>A data.frame: 6 × 21</caption>\n",
        "<thead>\n",
-       "\t<tr><th></th><th scope=col>Year</th><th scope=col>Player</th><th scope=col>not_Match_Up</th><th scope=col>MIN</th><th scope=col>PTS</th><th scope=col>not_WL</th><th scope=col>not_MIN</th><th scope=col>FG.</th><th scope=col>not_FGM</th><th scope=col>not_FGA</th><th scope=col>⋯</th><th scope=col>AST</th><th scope=col>not_DREB</th><th scope=col>not_REB</th><th scope=col>not_AST</th><th scope=col>not_STL</th><th scope=col>BLK</th><th scope=col>TOV</th><th scope=col>PF</th><th scope=col>PlusMinus</th><th scope=col>Fantasy</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
+       "\t<tr><th></th><th scope=col>Year</th><th scope=col>Player</th><th scope=col>GP</th><th scope=col>MIN</th><th scope=col>PTS</th><th scope=col>FGM</th><th scope=col>FGA</th><th scope=col>FG.</th><th scope=col>X3PM</th><th scope=col>X3PA</th><th scope=col>⋯</th><th scope=col>FTM</th><th scope=col>FTA</th><th scope=col>FT.</th><th scope=col>OREB</th><th scope=col>DREB</th><th scope=col>REB</th><th scope=col>AST</th><th scope=col>STL</th><th scope=col>BLK</th><th scope=col>TOV</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>2011</td><td>Kevin Durant     </td><td>78</td><td>38.9</td><td>27.7</td><td>9.1</td><td>19.7</td><td>46.2</td><td>1.9</td><td>5.3</td><td>⋯</td><td>2.7</td><td>1.1</td><td>1.0</td><td>2.8</td><td>24.9</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>2011</td><td>LeBron James     </td><td>79</td><td>38.8</td><td>26.7</td><td>9.6</td><td>18.8</td><td>51.0</td><td>1.2</td><td>3.5</td><td>⋯</td><td>7.0</td><td>1.6</td><td>0.6</td><td>3.6</td><td>28.6</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>2011</td><td>Carmelo Anthony  </td><td>77</td><td>35.7</td><td>25.6</td><td>8.9</td><td>19.5</td><td>45.5</td><td>1.2</td><td>3.3</td><td>⋯</td><td>2.9</td><td>0.9</td><td>0.6</td><td>2.7</td><td>22.7</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>2011</td><td>Dwyane Wade      </td><td>76</td><td>37.1</td><td>25.5</td><td>9.1</td><td>18.2</td><td>50.0</td><td>0.8</td><td>2.7</td><td>⋯</td><td>4.6</td><td>1.5</td><td>1.1</td><td>3.1</td><td>24.8</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>2011</td><td>Kobe Bryant      </td><td>82</td><td>33.9</td><td>25.3</td><td>9.0</td><td>20.0</td><td>45.1</td><td>1.4</td><td>4.3</td><td>⋯</td><td>4.7</td><td>1.2</td><td>0.1</td><td>3.0</td><td>21.4</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>2011</td><td>Amar'e Stoudemire</td><td>78</td><td>36.8</td><td>25.3</td><td>9.5</td><td>19.0</td><td>50.2</td><td>0.1</td><td>0.3</td><td>⋯</td><td>2.6</td><td>0.9</td><td>1.9</td><td>3.2</td><td>24.6</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>2011</td><td>Kevin Durant     </td><td>78</td><td>38.9</td><td>27.7</td><td>9.1</td><td>19.7</td><td>46.2</td><td>1.9</td><td>5.3</td><td>⋯</td><td>7.6</td><td>8.7</td><td>88.0</td><td>0.7</td><td>6.1</td><td>6.8</td><td>2.7</td><td>1.1</td><td>1.0</td><td>2.8</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>2011</td><td>LeBron James     </td><td>79</td><td>38.8</td><td>26.7</td><td>9.6</td><td>18.8</td><td>51.0</td><td>1.2</td><td>3.5</td><td>⋯</td><td>6.4</td><td>8.4</td><td>75.9</td><td>1.0</td><td>6.5</td><td>7.5</td><td>7.0</td><td>1.6</td><td>0.6</td><td>3.6</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>2011</td><td>Carmelo Anthony  </td><td>77</td><td>35.7</td><td>25.6</td><td>8.9</td><td>19.5</td><td>45.5</td><td>1.2</td><td>3.3</td><td>⋯</td><td>6.6</td><td>7.9</td><td>83.8</td><td>1.5</td><td>5.8</td><td>7.3</td><td>2.9</td><td>0.9</td><td>0.6</td><td>2.7</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>2011</td><td>Dwyane Wade      </td><td>76</td><td>37.1</td><td>25.5</td><td>9.1</td><td>18.2</td><td>50.0</td><td>0.8</td><td>2.7</td><td>⋯</td><td>6.5</td><td>8.6</td><td>75.8</td><td>1.6</td><td>4.8</td><td>6.4</td><td>4.6</td><td>1.5</td><td>1.1</td><td>3.1</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>2011</td><td>Kobe Bryant      </td><td>82</td><td>33.9</td><td>25.3</td><td>9.0</td><td>20.0</td><td>45.1</td><td>1.4</td><td>4.3</td><td>⋯</td><td>5.9</td><td>7.1</td><td>82.8</td><td>1.0</td><td>4.1</td><td>5.1</td><td>4.7</td><td>1.2</td><td>0.1</td><td>3.0</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>2011</td><td>Amar'e Stoudemire</td><td>78</td><td>36.8</td><td>25.3</td><td>9.5</td><td>19.0</td><td>50.2</td><td>0.1</td><td>0.3</td><td>⋯</td><td>6.1</td><td>7.7</td><td>79.2</td><td>2.5</td><td>5.6</td><td>8.2</td><td>2.6</td><td>0.9</td><td>1.9</td><td>3.2</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 6 × 27\n",
+       "A data.frame: 6 × 21\n",
        "\\begin{tabular}{r|lllllllllllllllllllll}\n",
-       "  & Year & Player & not\\_Match\\_Up & MIN & PTS & not\\_WL & not\\_MIN & FG. & not\\_FGM & not\\_FGA & ⋯ & AST & not\\_DREB & not\\_REB & not\\_AST & not\\_STL & BLK & TOV & PF & PlusMinus & Fantasy\\\\\n",
-       "  & <int> & <chr> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <lgl> & <lgl> & <lgl> & <lgl> & <lgl>\\\\\n",
+       "  & Year & Player & GP & MIN & PTS & FGM & FGA & FG. & X3PM & X3PA & ⋯ & FTM & FTA & FT. & OREB & DREB & REB & AST & STL & BLK & TOV\\\\\n",
+       "  & <int> & <chr> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t1 & 2011 & Kevin Durant      & 78 & 38.9 & 27.7 & 9.1 & 19.7 & 46.2 & 1.9 & 5.3 & ⋯ & 2.7 & 1.1 & 1.0 & 2.8 & 24.9 & NA & NA & NA & NA & NA\\\\\n",
-       "\t2 & 2011 & LeBron James      & 79 & 38.8 & 26.7 & 9.6 & 18.8 & 51.0 & 1.2 & 3.5 & ⋯ & 7.0 & 1.6 & 0.6 & 3.6 & 28.6 & NA & NA & NA & NA & NA\\\\\n",
-       "\t3 & 2011 & Carmelo Anthony   & 77 & 35.7 & 25.6 & 8.9 & 19.5 & 45.5 & 1.2 & 3.3 & ⋯ & 2.9 & 0.9 & 0.6 & 2.7 & 22.7 & NA & NA & NA & NA & NA\\\\\n",
-       "\t4 & 2011 & Dwyane Wade       & 76 & 37.1 & 25.5 & 9.1 & 18.2 & 50.0 & 0.8 & 2.7 & ⋯ & 4.6 & 1.5 & 1.1 & 3.1 & 24.8 & NA & NA & NA & NA & NA\\\\\n",
-       "\t5 & 2011 & Kobe Bryant       & 82 & 33.9 & 25.3 & 9.0 & 20.0 & 45.1 & 1.4 & 4.3 & ⋯ & 4.7 & 1.2 & 0.1 & 3.0 & 21.4 & NA & NA & NA & NA & NA\\\\\n",
-       "\t6 & 2011 & Amar'e Stoudemire & 78 & 36.8 & 25.3 & 9.5 & 19.0 & 50.2 & 0.1 & 0.3 & ⋯ & 2.6 & 0.9 & 1.9 & 3.2 & 24.6 & NA & NA & NA & NA & NA\\\\\n",
+       "\t1 & 2011 & Kevin Durant      & 78 & 38.9 & 27.7 & 9.1 & 19.7 & 46.2 & 1.9 & 5.3 & ⋯ & 7.6 & 8.7 & 88.0 & 0.7 & 6.1 & 6.8 & 2.7 & 1.1 & 1.0 & 2.8\\\\\n",
+       "\t2 & 2011 & LeBron James      & 79 & 38.8 & 26.7 & 9.6 & 18.8 & 51.0 & 1.2 & 3.5 & ⋯ & 6.4 & 8.4 & 75.9 & 1.0 & 6.5 & 7.5 & 7.0 & 1.6 & 0.6 & 3.6\\\\\n",
+       "\t3 & 2011 & Carmelo Anthony   & 77 & 35.7 & 25.6 & 8.9 & 19.5 & 45.5 & 1.2 & 3.3 & ⋯ & 6.6 & 7.9 & 83.8 & 1.5 & 5.8 & 7.3 & 2.9 & 0.9 & 0.6 & 2.7\\\\\n",
+       "\t4 & 2011 & Dwyane Wade       & 76 & 37.1 & 25.5 & 9.1 & 18.2 & 50.0 & 0.8 & 2.7 & ⋯ & 6.5 & 8.6 & 75.8 & 1.6 & 4.8 & 6.4 & 4.6 & 1.5 & 1.1 & 3.1\\\\\n",
+       "\t5 & 2011 & Kobe Bryant       & 82 & 33.9 & 25.3 & 9.0 & 20.0 & 45.1 & 1.4 & 4.3 & ⋯ & 5.9 & 7.1 & 82.8 & 1.0 & 4.1 & 5.1 & 4.7 & 1.2 & 0.1 & 3.0\\\\\n",
+       "\t6 & 2011 & Amar'e Stoudemire & 78 & 36.8 & 25.3 & 9.5 & 19.0 & 50.2 & 0.1 & 0.3 & ⋯ & 6.1 & 7.7 & 79.2 & 2.5 & 5.6 & 8.2 & 2.6 & 0.9 & 1.9 & 3.2\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 6 × 27\n",
+       "A data.frame: 6 × 21\n",
        "\n",
-       "| <!--/--> | Year &lt;int&gt; | Player &lt;chr&gt; | not_Match_Up &lt;int&gt; | MIN &lt;dbl&gt; | PTS &lt;dbl&gt; | not_WL &lt;dbl&gt; | not_MIN &lt;dbl&gt; | FG. &lt;dbl&gt; | not_FGM &lt;dbl&gt; | not_FGA &lt;dbl&gt; | ⋯ ⋯ | AST &lt;dbl&gt; | not_DREB &lt;dbl&gt; | not_REB &lt;dbl&gt; | not_AST &lt;dbl&gt; | not_STL &lt;dbl&gt; | BLK &lt;lgl&gt; | TOV &lt;lgl&gt; | PF &lt;lgl&gt; | PlusMinus &lt;lgl&gt; | Fantasy &lt;lgl&gt; |\n",
+       "| <!--/--> | Year &lt;int&gt; | Player &lt;chr&gt; | GP &lt;int&gt; | MIN &lt;dbl&gt; | PTS &lt;dbl&gt; | FGM &lt;dbl&gt; | FGA &lt;dbl&gt; | FG. &lt;dbl&gt; | X3PM &lt;dbl&gt; | X3PA &lt;dbl&gt; | ⋯ ⋯ | FTM &lt;dbl&gt; | FTA &lt;dbl&gt; | FT. &lt;dbl&gt; | OREB &lt;dbl&gt; | DREB &lt;dbl&gt; | REB &lt;dbl&gt; | AST &lt;dbl&gt; | STL &lt;dbl&gt; | BLK &lt;dbl&gt; | TOV &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | 2011 | Kevin Durant      | 78 | 38.9 | 27.7 | 9.1 | 19.7 | 46.2 | 1.9 | 5.3 | ⋯ | 2.7 | 1.1 | 1.0 | 2.8 | 24.9 | NA | NA | NA | NA | NA |\n",
-       "| 2 | 2011 | LeBron James      | 79 | 38.8 | 26.7 | 9.6 | 18.8 | 51.0 | 1.2 | 3.5 | ⋯ | 7.0 | 1.6 | 0.6 | 3.6 | 28.6 | NA | NA | NA | NA | NA |\n",
-       "| 3 | 2011 | Carmelo Anthony   | 77 | 35.7 | 25.6 | 8.9 | 19.5 | 45.5 | 1.2 | 3.3 | ⋯ | 2.9 | 0.9 | 0.6 | 2.7 | 22.7 | NA | NA | NA | NA | NA |\n",
-       "| 4 | 2011 | Dwyane Wade       | 76 | 37.1 | 25.5 | 9.1 | 18.2 | 50.0 | 0.8 | 2.7 | ⋯ | 4.6 | 1.5 | 1.1 | 3.1 | 24.8 | NA | NA | NA | NA | NA |\n",
-       "| 5 | 2011 | Kobe Bryant       | 82 | 33.9 | 25.3 | 9.0 | 20.0 | 45.1 | 1.4 | 4.3 | ⋯ | 4.7 | 1.2 | 0.1 | 3.0 | 21.4 | NA | NA | NA | NA | NA |\n",
-       "| 6 | 2011 | Amar'e Stoudemire | 78 | 36.8 | 25.3 | 9.5 | 19.0 | 50.2 | 0.1 | 0.3 | ⋯ | 2.6 | 0.9 | 1.9 | 3.2 | 24.6 | NA | NA | NA | NA | NA |\n",
+       "| 1 | 2011 | Kevin Durant      | 78 | 38.9 | 27.7 | 9.1 | 19.7 | 46.2 | 1.9 | 5.3 | ⋯ | 7.6 | 8.7 | 88.0 | 0.7 | 6.1 | 6.8 | 2.7 | 1.1 | 1.0 | 2.8 |\n",
+       "| 2 | 2011 | LeBron James      | 79 | 38.8 | 26.7 | 9.6 | 18.8 | 51.0 | 1.2 | 3.5 | ⋯ | 6.4 | 8.4 | 75.9 | 1.0 | 6.5 | 7.5 | 7.0 | 1.6 | 0.6 | 3.6 |\n",
+       "| 3 | 2011 | Carmelo Anthony   | 77 | 35.7 | 25.6 | 8.9 | 19.5 | 45.5 | 1.2 | 3.3 | ⋯ | 6.6 | 7.9 | 83.8 | 1.5 | 5.8 | 7.3 | 2.9 | 0.9 | 0.6 | 2.7 |\n",
+       "| 4 | 2011 | Dwyane Wade       | 76 | 37.1 | 25.5 | 9.1 | 18.2 | 50.0 | 0.8 | 2.7 | ⋯ | 6.5 | 8.6 | 75.8 | 1.6 | 4.8 | 6.4 | 4.6 | 1.5 | 1.1 | 3.1 |\n",
+       "| 5 | 2011 | Kobe Bryant       | 82 | 33.9 | 25.3 | 9.0 | 20.0 | 45.1 | 1.4 | 4.3 | ⋯ | 5.9 | 7.1 | 82.8 | 1.0 | 4.1 | 5.1 | 4.7 | 1.2 | 0.1 | 3.0 |\n",
+       "| 6 | 2011 | Amar'e Stoudemire | 78 | 36.8 | 25.3 | 9.5 | 19.0 | 50.2 | 0.1 | 0.3 | ⋯ | 6.1 | 7.7 | 79.2 | 2.5 | 5.6 | 8.2 | 2.6 | 0.9 | 1.9 | 3.2 |\n",
        "\n"
       ],
       "text/plain": [
-       "  Year Player            not_Match_Up MIN  PTS  not_WL not_MIN FG.  not_FGM\n",
-       "1 2011 Kevin Durant      78           38.9 27.7 9.1    19.7    46.2 1.9    \n",
-       "2 2011 LeBron James      79           38.8 26.7 9.6    18.8    51.0 1.2    \n",
-       "3 2011 Carmelo Anthony   77           35.7 25.6 8.9    19.5    45.5 1.2    \n",
-       "4 2011 Dwyane Wade       76           37.1 25.5 9.1    18.2    50.0 0.8    \n",
-       "5 2011 Kobe Bryant       82           33.9 25.3 9.0    20.0    45.1 1.4    \n",
-       "6 2011 Amar'e Stoudemire 78           36.8 25.3 9.5    19.0    50.2 0.1    \n",
-       "  not_FGA ⋯ AST not_DREB not_REB not_AST not_STL BLK TOV PF PlusMinus Fantasy\n",
-       "1 5.3     ⋯ 2.7 1.1      1.0     2.8     24.9    NA  NA  NA NA        NA     \n",
-       "2 3.5     ⋯ 7.0 1.6      0.6     3.6     28.6    NA  NA  NA NA        NA     \n",
-       "3 3.3     ⋯ 2.9 0.9      0.6     2.7     22.7    NA  NA  NA NA        NA     \n",
-       "4 2.7     ⋯ 4.6 1.5      1.1     3.1     24.8    NA  NA  NA NA        NA     \n",
-       "5 4.3     ⋯ 4.7 1.2      0.1     3.0     21.4    NA  NA  NA NA        NA     \n",
-       "6 0.3     ⋯ 2.6 0.9      1.9     3.2     24.6    NA  NA  NA NA        NA     "
+       "  Year Player            GP MIN  PTS  FGM FGA  FG.  X3PM X3PA ⋯ FTM FTA FT. \n",
+       "1 2011 Kevin Durant      78 38.9 27.7 9.1 19.7 46.2 1.9  5.3  ⋯ 7.6 8.7 88.0\n",
+       "2 2011 LeBron James      79 38.8 26.7 9.6 18.8 51.0 1.2  3.5  ⋯ 6.4 8.4 75.9\n",
+       "3 2011 Carmelo Anthony   77 35.7 25.6 8.9 19.5 45.5 1.2  3.3  ⋯ 6.6 7.9 83.8\n",
+       "4 2011 Dwyane Wade       76 37.1 25.5 9.1 18.2 50.0 0.8  2.7  ⋯ 6.5 8.6 75.8\n",
+       "5 2011 Kobe Bryant       82 33.9 25.3 9.0 20.0 45.1 1.4  4.3  ⋯ 5.9 7.1 82.8\n",
+       "6 2011 Amar'e Stoudemire 78 36.8 25.3 9.5 19.0 50.2 0.1  0.3  ⋯ 6.1 7.7 79.2\n",
+       "  OREB DREB REB AST STL BLK TOV\n",
+       "1 0.7  6.1  6.8 2.7 1.1 1.0 2.8\n",
+       "2 1.0  6.5  7.5 7.0 1.6 0.6 3.6\n",
+       "3 1.5  5.8  7.3 2.9 0.9 0.6 2.7\n",
+       "4 1.6  4.8  6.4 4.6 1.5 1.1 3.1\n",
+       "5 1.0  4.1  5.1 4.7 1.2 0.1 3.0\n",
+       "6 2.5  5.6  8.2 2.6 0.9 1.9 3.2"
       ]
      },
      "metadata": {},
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "players <- read.csv(\"https://raw.githubusercontent.com/RayNguyent/DSCI-100-project/develop/data/nba_player_stats.csv\")\n",
+    "players <- read.csv(\"data/nba_player_stats.csv\")\n",
     "head(players)\n",
     "players_filtered <- players %>% \n",
     "    filter(Year <= 2015 & Year >= 2011) %>% \n",
