--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -12,7 +12,32 @@
    "metadata": {},
    "source": [
     "## NBA:\n",
-    "NBA is one of the most awaited sport events in America and the globe in general.....\n"
+    "NBA is one of the most awaited sport events in America and the globe in general. Every year in February, NBA fans rejoice as they get to see their favorite players selected for the all-star game. Players are selected by media and fan votes, meaning that popularity is the nominating factor. However, players are more likely to be popular based on their individual game-to-game performance. Thus, this analysis hopes to answer the question: Can an NBA player’s selection to the all star game be predicted by their annual performance?\n",
+    "\n",
+    "In order to answer this question, we will be using two sets of data, one from “NBA Player Stats” on nba.com and “All Star Stat 2000-2016” from kaggle.com. NBA Player Stats includes all the NBA player statistics for each season from 2010-2016 and the All Star dataset includes the all star statistics from 2000-2016. Using these datasets we aim to make a classification model that will predict whether a player will be an all star for each season based on their annual performances.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The colummns are:\n",
+    "\n",
+    "- 'year' : Season\n",
+    "- 'Player': player's name \n",
+    "- 'MIN' : average minutes per game\n",
+    "- 'PTS' : average points per game\n",
+    "- 'FG.' : average field goal percentage per game\n",
+    "- 'AST' : average assists per game\n",
+    "\n",
+    "\n",
+    "....\n",
+    "\n",
+    "We want to answer the question: With a certain stats throughout the season, is it likely for a player to win the All Star title?\n",
+    "\n",
+    "The original datasets are available here: "
    ]
   },
   {
@@ -56,27 +81,6 @@
     "library(readxl)\n",
     "library(dplyr)\n",
     "library(GGally)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Read the NBA players stats file. Here we only use data for 2011 to 2015 season....\n",
-    "\n",
-    "The colummn are:\n",
-    "\n",
-    "- 'year' : Season\n",
-    "- 'Player': player's name \n",
-    "- 'not_Match_Up' :\n",
-    "- 'MIN' : \n",
-    "- 'PTS' : Average points that player scored\n",
-    "\n",
-    "....\n",
-    "\n",
-    "We want to answer the question: With a certain stats throughout the season, is it likely for a player to win the All Star title?\n",
-    "\n",
-    "The original datasets are available here: \n"
    ]
   },
   {
